--- a/README
+++ b/README
@@ -12,8 +12,11 @@ https://nl.wikipedia.org/wiki/Bhagwan_Sri_Rajneesh
 # kabouter buttplug
 https://en.wiktionary.org/wiki/Kabouter_Buttplug
 
+# phil specter
+https://nl.wikipedia.org/wiki/Phil_Spector
+
 # helter skelter
 https://en.wikipedia.org/wiki/Helter_Skelter_%28song%29
 
-# phil specter
-https://nl.wikipedia.org/wiki/Phil_Spector
+# eendrachtsplein
+https://nl.wikipedia.org/wiki/Eendrachtsplein
