--- a/README
+++ b/README
@@ -6,17 +6,20 @@
 # bouman ggz
 https://nl.wikipedia.org/wiki/Bouman_GGZ
 
-# bhagwan sri rsineesh
+# bhagwan sri rajneesh
 https://nl.wikipedia.org/wiki/Bhagwan_Sri_Rajneesh
 
 # kabouter buttplug
 https://en.wiktionary.org/wiki/Kabouter_Buttplug
 
+# helter skelter
+https://en.wikipedia.org/wiki/Helter_Skelter_%28song%29
+
 # phil specter
 https://nl.wikipedia.org/wiki/Phil_Spector
 
-# helter skelter
-https://en.wikipedia.org/wiki/Helter_Skelter_%28song%29
+# isoleercel
+https://nl.wikipedia.org/wiki/Isoleercel
 
 # eendrachtsplein
 https://nl.wikipedia.org/wiki/Eendrachtsplein
