--- a/README
+++ b/README
@@ -18,6 +18,9 @@ https://en.wikipedia.org/wiki/Helter_Skelter_%28song%29
 # phil specter
 https://nl.wikipedia.org/wiki/Phil_Spector
 
+# prinsenland
+https://nl.wikipedia.org/wiki/Prinsenland
+
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
 
