--- a/README
+++ b/README
@@ -12,11 +12,14 @@ https://nl.wikipedia.org/wiki/Bhagwan_Sri_Rajneesh
 # kabouter buttplug
 https://en.wiktionary.org/wiki/Kabouter_Buttplug
 
+# phil specter
+https://nl.wikipedia.org/wiki/Phil_Spector
+
 # helter skelter
 https://en.wikipedia.org/wiki/Helter_Skelter_%28song%29
 
-# phil specter
-https://nl.wikipedia.org/wiki/Phil_Spector
+# charlie manson
+https://en.wikipedia.org/wiki/Charles_Manson
 
 # prinsenland
 https://nl.wikipedia.org/wiki/Prinsenland
