--- a/README
+++ b/README
@@ -1,6 +1,6 @@
---------------------------
-| phil-specter-eendracht |
---------------------------
+-----------------------
+| mediapark-eendracht |
+-----------------------
 
 'imagine'
 
@@ -28,6 +28,9 @@ https://nl.wikipedia.org/wiki/Prinsenland
 
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
+
+# liquidatie
+https://nl.wikipedia.org/wiki/Liquidatie_(moord)
 
 # eendrachtsplein
 https://nl.wikipedia.org/wiki/Eendrachtsplein
