--- a/README
+++ b/README
@@ -35,4 +35,4 @@ https://nl.wikipedia.org/wiki/Isoleercel
 # eendrachtsplein
 https://nl.wikipedia.org/wiki/Eendrachtsplein
 
-doctor nekschot in action
+doctor nekschot in action ® 2002-2021
