--- a/README
+++ b/README
@@ -26,11 +26,14 @@ https://en.wikipedia.org/wiki/Helter_Skelter_%28song%29
 # charlie manson
 https://en.wikipedia.org/wiki/Charles_Manson
 
-# prinsenland
-https://nl.wikipedia.org/wiki/Prinsenland
+# psycho
+https://en.wikipedia.org/wiki/Psycho_(Muse_song)
 
 # liquidatie
 https://nl.wikipedia.org/wiki/Liquidatie_(moord)
+
+# prinsenland
+https://nl.wikipedia.org/wiki/Prinsenland
 
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
