--- a/README
+++ b/README
@@ -29,8 +29,14 @@ https://en.wikipedia.org/wiki/Charles_Manson
 # psycho
 https://en.wikipedia.org/wiki/Psycho_(Muse_song)
 
-# liquidatie
-https://nl.wikipedia.org/wiki/Liquidatie_(moord)
+# geweld
+https://nl.wikipedia.org/wiki/Geweld
+
+# syringe
+https://en.wikipedia.org/wiki/Syringe
+
+# depot injection
+https://en.wikipedia.org/wiki/Depot_injection
 
 # prinsenland
 https://nl.wikipedia.org/wiki/Prinsenland
