--- a/README
+++ b/README
@@ -44,6 +44,9 @@ https://en.wikipedia.org/wiki/Buttocks
 # prinsenland
 https://nl.wikipedia.org/wiki/Prinsenland
 
+# amputation
+https://de.wikipedia.org/wiki/Amputation
+
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
 
