--- a/README
+++ b/README
@@ -50,6 +50,9 @@ https://de.wikipedia.org/wiki/Amputation
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
 
+# mishandeling
+https://nl.wikipedia.org/wiki/Mishandeling
+
 # eendrachtsplein
 https://nl.wikipedia.org/wiki/Eendrachtsplein
 
