--- a/README
+++ b/README
@@ -1,6 +1,6 @@
------------------------
-| mediapark-eendracht |
------------------------
+----------------------
+| mediapark-standard |
+----------------------
 
 'imagine'
 
