--- a/README
+++ b/README
@@ -56,6 +56,9 @@ https://nl.wikipedia.org/wiki/Isoleercel
 # do they know its christmas?
 https://en.wikipedia.org/wiki/Do_They_Know_It%27s_Christmas%3F
 
+# buckshot lefonque
+https://en.wikipedia.org/wiki/Buckshot_LeFonque_(album)
+
 # eendrachtsplein
 https://nl.wikipedia.org/wiki/Eendrachtsplein
 
